--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <meta name="description"
         content="PartGrasp">
-  <meta name="keywords" content="Manipulation, Semantic Correspondence, Grasping">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>PartGrasp</title>
 
@@ -29,19 +28,18 @@
 </head>
 <body>
 
-<section class="hero">
+<!-- <section class="hero">
   <div class="hero-body">
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">PartGrasp: Part-level Geometry Complements Foundation Models for Fine-Grained Grasp Transfer</h1>
+          <h1 class="title is-1 publication-title">PartGrasp: Generalizable Part-level Grasping via Semantic-Geometric Alignment</h1>
           <div class="is-size-5 publication-authors">
-            <span class="author-block">Anonymous</span>
+            <span class="author-block">Haoyang Lu, Chengcai Yang, Guangyan Chen and Yufeng Yue*</span>
           </div>
 
           <div class="column has-text-centered">
             <div class="publication-links">
-              <!-- PDF Link. -->
               <span class="link-block">
                 <a target="_black"
                    class="external-link button is-normal is-rounded is-dark" disabled>
@@ -60,7 +58,6 @@
                   <span>arXiv</span>
                 </a>
               </span>
-              <!-- Code Link. -->
               <span class="link-block">
                 <a target="_black"
                    class="external-link button is-normal is-rounded is-dark" disabled>
@@ -71,28 +68,12 @@
                   </a>
               </span>
             </div>
-
           </div>
         </div>
       </div>
     </div>
   </div>
-</section>
-
-<section class="hero teaser">
-  <div class="container is-max-desktop">
-    <div class="hero-body">
-      <video id="teaser" autoplay muted loop playsinline height="100%">
-        <source src="./media/experiment_cut.mp4"
-                type="video/mp4">
-      </video>
-      <h2 class="subtitle has-text-centered">
-        PartGrasp Demonstration & Pipeline
-      </h2>
-    </div>
-  </div>
-</section>
-
+</section> -->
 
 <section class="section">
   <div class="container is-max-desktop">
@@ -107,30 +88,18 @@
         </div>
       </div>
     </div>
-    <!--/ Abstract. -->
-
-    <!-- Paper video. -->
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
-        <h2 class="title is-3">Video</h2>
-        <video id="teaser" autoplay muted loop playsinline height="100%">
-          <source src="./media/method_only.mp4"
-                  type="video/mp4">
-        </video>
-      </div>
-    </div>
-    <!--/ Paper video. -->
   </div>
 </section>
-
 
 <section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Result Demonstrations</h2>
-        <img src="./media/simulation.png"
+        <img src="./media/pipeline.jpg"
               class="interpolation-image" />
+        <h2 class="subtitle has-text-centered">
+          The Pipleline of PartGrasp
+        </h2>
       </div>
     </div>
   </div>
