add videos and correct title

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 
-<!-- <section class="hero">
+<section class="hero">
   <div class="hero-body">
     <div class="container is-max-desktop">
       <div class="columns is-centered">
@@ -38,7 +38,7 @@
             <span class="author-block">Haoyang Lu, Chengcai Yang, Guangyan Chen and Yufeng Yue*</span>
           </div>
 
-          <div class="column has-text-centered">
+          <!-- <div class="column has-text-centered">
             <div class="publication-links">
               <span class="link-block">
                 <a target="_black"
@@ -68,12 +68,101 @@
                   </a>
               </span>
             </div>
-          </div>
+          </div> -->
+
         </div>
       </div>
     </div>
   </div>
-</section> -->
+</section>
+
+
+<section class="hero is-light is-small">
+  <div class="hero-body">
+    <div class="container">
+      <div id="results-carousel" class="carousel results-carousel">
+        <div class="item item-steve">
+          <video poster="" id="steve" controls muted loop playsinline height="100%">
+            <source src="./media/blue_mug.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-chair-tp">
+          <video poster="" id="chair-tp" controls muted loop playsinline height="100%">
+            <source src="./media/red_cat_mug.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-shiba">
+          <video poster="" id="shiba" controls muted loop playsinline height="100%">
+            <source src="./media/metal_pan.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-fullbody">
+          <video poster="" id="fullbody" controls muted loop playsinline height="100%">
+            <source src="./media/wood_pan.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-blueshirt">
+          <video poster="" id="blueshirt" controls muted loop playsinline height="100%">
+            <source src="./media/glass_bottle.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-mask">
+          <video poster="" id="mask" controls muted loop playsinline height="100%">
+            <source src="./media/green_bottle.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+      </div>
+
+      <h2 class="subtitle has-text-centered">
+        Demonstrations of intra-category experiments (left: reference object, right: target object).
+      </h2>
+    </div>
+  </div>
+</section>
+
+
+<section class="hero is-light is-small">
+  <div class="hero-body">
+    <div class="container">
+      <div id="results-carousel" class="carousel results-carousel">
+        <div class="item item-steve">
+          <video poster="" id="steve" controls muted loop playsinline height="100%">
+            <source src="./media/elephant_watering_can.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-chair-tp">
+          <video poster="" id="chair-tp" controls muted loop playsinline height="100%">
+            <source src="./media/orange_teapot.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-shiba">
+          <video poster="" id="shiba" controls muted loop playsinline height="100%">
+            <source src="./media/tennis_racket.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-fullbody">
+          <video poster="" id="fullbody" controls muted loop playsinline height="100%">
+            <source src="./media/pink_star.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+      </div>
+
+      <h2 class="subtitle has-text-centered">
+        Demonstrations of inter-category experiments (left: reference object, right: target object).
+      </h2>
+    </div>
+  </div>
+</section>
 
 <section class="section">
   <div class="container is-max-desktop">
